# product-recommender-system

./: .pre-commit-config.yaml  CONTRIBUTING.md  Containerfile  INSTALLING.md  Makefile  README.md
recommendation-core/: .gitignore  Containerfile  README.md  __init__.py  pyproject.toml
recommendation-core/.github/workflows/: build-and-push.yaml
recommendation-core/src/recommendation_core/: __init__.py
recommendation-core/src/recommendation_core/feature_repo/: data_sources.py  entities.py  feature_services.py  feature_views.py
recommendation-core/src/recommendation_core/feature_repo/data/: category_relationships.parquet  dummy_item_embed.parquet  (+10 more)
recommendation-core/src/recommendation_core/generation/: amazon_with_fixed_images.py  dataset_gen_amazon.py  generate_images.py
recommendation-core/src/recommendation_core/models/: data_util.py  entity_tower.py  filtering.py  item_tower.py  train_two_tower.py  two_tower.py  user_tower.py
recommendation-core/src/recommendation_core/service/: clip_encoder.py  dataset_provider.py  search_by_image.py  search_by_text.py
recommendation-core/tests/: test_amazon_with_fixed_images.py  test_clip_encoder.py  test_create_and_train_two_tower.py  test_data_util.py  test_entity_tower.py  test_search_service.py
recommendation-core/tests/data/: long_text.txt
recommendation-training/: .gitignore  Containerfile  README.md  entrypoint.sh  pyproject.toml  train-workflow.py
recommendation-training/.github/workflows/: build-and-push-oc-tools.yaml  build-and-push.yaml
recommendation-training/oc-tools/: Containerfile
(+87 files in other folders)
